--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,21 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to Tuesday</title>
-</head>
-<body>
-    <h1>Hello Tuesday</h1>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Welcome to Tuesday</title>
+        <script src="http://code.jquery.com/jquery.min.js"></script>
+        <script>
+            $(document).ready(function() {
+                $.getJSON('./q/question', function(data) {
+                    for (var i = 0; i < data.length; i++)
+                        $('#question').html(data[i].question)
+                });
+            });
+        </script>
+    </head>
+    <body>
+        <h1>Hello Tuesday</h1>
+        <div id="question"></div>
+    </body>
 </html>
